# lang-sort

./: .gitignore  README.md  README_en.md  pyproject.toml
lang-sort/: main.py  sorter.py
